--- a/_posts/2019-05-20-Cisco常用IOS命令.md
+++ b/_posts/2019-05-20-Cisco常用IOS命令.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      Cisco常用IOS命令
-subtitle:   NAT，RIP,DHCP等
+subtitle:   NAT,RIP,DHCP等
 date:       2019-05-20
 author:     Jorian
 header-img: img/computer-networks.jpg
