--- a/_posts/2019-05-20-Cisco常用IOS命令.md
+++ b/_posts/2019-05-20-Cisco常用IOS命令.md
@@ -11,7 +11,93 @@ tags:
     - 计算机网络
 ---
 
->并不适合阅读的个人文档。
+>并不适合阅读的个人文档。  
+>
+>
+
+
+### 基础配置
+**1.从用户模式进入特权模式**  
+R1>enable  
+
+2. 从特权模式进入全局配置模式**  
+R1#configure terminal  
+
+3. 设置主机名**
+R1(config)#hostname R1
+
+4. 退出到特权模式
+R1(config)#end
+
+5.退出到用户模式
+R1#disable
+
+6.退出控制台线路
+R1>quit
+
+7.通过console进入控制台口线路
+R1(config)#line console {number}
+
+8.启动光标跟随
+R1(config-line)#logging synchronous
+
+9.设置键盘多久无动作，自动被弹出到用户模式以外，即退出
+（如果设置为0分0秒代表永不超时）
+
+R1(config-line)#exec-timeout {minute}{second}
+
+10.显示路由器的当前时间
+R1#show clock
+
+11.设置标语信息
+R1(config)#banner login # {text} #    //这个banner配置一些登陆前的提示
+
+R1(config)#banner motd  # {text} #   //这个banner配置一些成功登陆游的提示信息
+
+12.进入接口配置模式
+R1(config)#interface {type} {number}
+
+13.为接口设置描述信息
+R1(config-if)#description {text}
+
+14.显示某个接口的配置信息
+R1#show running-config interface {type}{number}
+
+15. 设置特权模式进入密码
+R1(config)#enable password {password}  //该密码是基于明文的(通过show running-config可见)
+
+R1(config)#enable secret {password}    //  该密码是基于MD5加密的
+
+注：密码是区分大小写的；如果同时设置了两种认证密码，只用后者生效
+
+16.进入控制台口线路
+R1(config)#line console {number}  //通过console线方式进入控制台
+
+R1(config)#line aux {number}       //通过辅助接口（AUX）线路进入控制台
+
+R1(config)#line vty {start-number}{end-number} //通过虚拟终端线路（VTY）进入控制台
+
+注：虚拟终端线路（VTY）是为telnet会话所用
+
+17.设置控制台端口的密码
+R1(config-line)#password {password}  
+
+注：这里的登录密码是明文方式保存在DRAM（running-config）文件中
+
+R1(config-line)#login   //启动登陆
+
+18.关闭DNS查询功能
+R1(config)#no ip domain lookup
+
+注：默认情况下，路由器的DNS查询是启用的，当输入一条Cisco IOS无法识别的命令时，路由器会把这个命令当成主机名，然后向DNS服务器进行查询。
+
+19.ping测试
+R1#ping {ip-address}
+
+20.telnet测试
+R1#telnet {ip-address}
+
+注：在telnet到远端路由器的时候，如果对方的VTY线路没有设置密码和启动登陆，将拒绝本地路由器telnet。
 
 ### 常用show命令：  
 **1.show version**  
@@ -93,6 +179,12 @@ show interface trunck
 
 
 
+### DCE接口配置时钟
+Router(config)#int s0/0/1
+Router(config-if)clock rate 64000
+
+
+
 ### 单臂路由
 R0(config)#inter f0/0   // 进入路由器和交换机相连的端口  
 R0(config-if)#no shutdown   // 启用端口  
@@ -130,7 +222,19 @@ S1(config-if)#ip address 172.16.2.154  255.255.255.0
 
 
 
-### ACL:  
+### RIP
+Router(config)#router rip  
+Router(config-router)#version 2  
+Router(config-router)no auto-summary（关闭自动汇总）  
+Router(config-router)passive-interface g 0/0（配置被动接口）  
+Router(config-router)default-information originate（向RIPv2网络注入默认路由）  
+
+**验证**  
+show ip route rip  
+
+
+
+### ACL  
 **查看ACL配置：**  
 show access-lists(best)  
 show running-config  
@@ -178,7 +282,7 @@ show ip interface (验证)
 
 
 
-### NAT (9.1.2)
+### NAT  
 **静态NAT(9.2.1):**  
 des: 静态 NAT 是内部地址与外部地址之间的一对一映射（永久映射）  
 (config)ip nat inside source static local-ip global-ip(建立内部本地地址与内部全局地址之间的映射)  
